@@ -527,6 +527,18 @@
   	
 	</target>
 
+   <!-- ====================================================== -->
+  <!-- Generate the Java files from the GORA schemas          -->
+  <!-- Will call this automatically later                     -->
+  <!-- ====================================================== -->
+  <target name="generate-gora-src" depends="init" description="--> compile the avro schema(s) in src/gora/*.avsc">
+    <java classname="org.apache.gora.compiler.GoraCompiler">
+     <classpath refid="classpath"/>
+     <arg value="src/gora/webpage.avsc"/>
+     <arg value="${src.dir}"/>
+    </java>
+ </target>
+
  <!-- ================================================================== -->
  <!-- Documentation -->
  <!-- ================================================================== -->
